nvim, i3, back on arch

--- a/alacritty/.config/alacritty/desktop.yml
+++ b/alacritty/.config/alacritty/desktop.yml
@@ -15,48 +15,73 @@ Scrolling:
 
 font:
   normal:
-    family: "JetBrainsMono Nerd Font"
+    family: "Berkeley Mono Nerd Font"
   bold:
-    family: "JetBrainsMono Nerd Font"
+    family: "Berkeley Mono Nerd Font"
     style: Bold
   italic:
-    family: "JetBrainsMono Nerd Font"
+    family: "Berkeley Mono Nerd Font"
     style: Italic
   bold_italic:
-    family: "JetBrainsMono Nerd Font"
+    family: "Berkeley Mono Nerd Font"
     style: Bold Italic
-  size: 9 
+  size: 9
 
 key_bindings: 
   - {key: Back, mods: Control, chars: "\x17"}
 
 colors:
   primary:
-    background: '#0F1D2E'
-    foreground: '#C6C0B9'
-
-  cursor:
-    cursor: '#C6C0B9'
-    text: '#0F1D2E'
+    background: "0x312c2b"
+    foreground: "0xe4e3e1"
 
   normal:
-    black:   '#152537'
-    red:     '#E48181'
-    green:   '#BBE481'
-    yellow:  '#E4D481'
-    blue:    '#81AEE4'
-    magenta: '#AA81E4'
-    cyan:    '#81E4B3'
-    white:   '#E8E6E3'
+    black: "0x1f1e1c"
+    red: "0xf86882"
+    green: "0xa6cd77"
+    yellow: "0xf0c66f"
+    blue: "0x81d0c9"
+    magenta: "0x9fa0e1"
+    cyan: "0xf08d71"
+    white: "0xe4e3e1"
 
   bright:
-    black:   '#152537'
-    red:     '#E48181'
-    green:   '#BBE481'
-    yellow:  '#E4D481'
-    blue:    '#81AEE4'
-    magenta: '#AA81E4'
-    cyan:    '#81E4B3'
-    white:   '#E8E6E3'
+    black: "0x90817b"
+    red: "0xf86882"
+    green: "0xa6cd77"
+    yellow: "0xf0c66f"
+    blue: "0x81d0c9"
+    magenta: "0x9fa0e1"
+    cyan: "0xf08d71"
+    white: "0xe4e3e1"
+
+    # colors:
+    #   primary:
+    #     background: '#0F1D2E'
+    #     foreground: '#C6C0B9'
+    # 
+    #   cursor:
+    #     cursor: '#C6C0B9'
+    #     text: '#0F1D2E'
+    # 
+    #   normal:
+    #     black:   '#152537'
+    #     red:     '#E48181'
+    #     green:   '#BBE481'
+    #     yellow:  '#E4D481'
+    #     blue:    '#81AEE4'
+    #     magenta: '#AA81E4'
+    #     cyan:    '#81E4B3'
+    #     white:   '#E8E6E3'
+    # 
+    #   bright:
+    #     black:   '#152537'
+    #     red:     '#E48181'
+    #     green:   '#BBE481'
+    #     yellow:  '#E4D481'
+    #     blue:    '#81AEE4'
+    #     magenta: '#AA81E4'
+    #     cyan:    '#81E4B3'
+    #     white:   '#E8E6E3'
 
 draw_bold_text_with_bright_colors: false
