remove blur, remove refresh rate

--- a/picom/.config/picom/desktop.conf
+++ b/picom/.config/picom/desktop.conf
@@ -1,13 +1,13 @@
 vsync = false;
 dbe = true;
 backend = "glx";
-refresh-rate = 0;
+# refresh-rate = 0;
 unredir-if-possible = true;
-blur: {
-    method = "dual_kawase";
-    # size = 10;
-    # deviation = true;
-}
+# blur: {
+#     method = "dual_kawase";
+#     # size = 10;
+#     # deviation = true;
+# }
 
 opacity-rule = [
   "95:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
