--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,53 +1,32 @@
-new-session -n $HOST
-
-# set -ga terminal-overrides ",xterm-256color*:Tc"
-# set -ag terminal-overrides ",xterm-kitty:Tc"
-set -g default-terminal "tmux-256color"
-
-
+set-option -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -as terminal-features ",alacritty*:RGB"
 
 unbind C-b
-set-option -g prefix C-a
+set -g prefix C-a
 bind-key C-a send-prefix
+bind r source-file $HOME/.tmux.conf
 
-set -g status-style 'bg=#333333 fg=#5eacd3'
-
-bind r source-file ~/.tmux.conf
 set -g base-index 1
-
-set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-bind C-l send-keys 'C-l'
-bind -n C-l clear-history
-set -g history-limit 10000
-
+set -g mouse on
 set -sg escape-time 0
+
+setw -g word-separators ' @"=()[]'
+setw -ag word-separators "'"
+
+set-option -g focus-events on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jabirali/tmux-tilish'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @tilish-navigator on
+set -g @tilish-default 'main-horizontal'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+# vim:foldmethod=marker
 
