tmux conf update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,13 @@ setw -ag word-separators "'"
 
 set-option -g focus-events on
 
+set -g @minimal-tmux-fg "#000000"
+set -g @minimal-tmux-bg "#d4aa02"
+set -g @minimal-tmux-justify "left"
+set -g @minimal-tmux-indicator-str "  tmux  "
+set -g @minimal-tmux-indicator true
+set -g @minimal-tmux-status "bottom"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
