--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ setw -ag word-separators "'"
 set-option -g focus-events on
 
 set -g @minimal-tmux-fg "#000000"
-set -g @minimal-tmux-bg "#d4aa02"
+set -g @minimal-tmux-bg "#708090"
 set -g @minimal-tmux-justify "left"
 set -g @minimal-tmux-indicator-str "  tmux  "
 set -g @minimal-tmux-indicator true
