--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ xmonad/.xmonad/xmonad.hi
 xmonad/.xmonad/xmonad.o
 xmonad/.xmonad/stackbackup.yaml
 xmonad/.xmonad/stackbackup.yaml.lock
+
+fish/.config/fish/functions/
+fish/.config/fish/conf.d/
+fish/.config/fish/themes/
+fish/.config/fish/completions/
+fish/.config/fish/fish_plugins
+fish/.config/fish/fish_variables
